# naturalperm

./: .gitignore  Makefile  README.md  WRITEUP.md  WRITEUP2.md  pyproject.toml
arxiv/: daland.tex  natperm.tex  texrecs.tex
arxiv/figs/: datatypes.py  fig1.py  figure.py
naturalperm/: __main__.py  binary.py  isomorphism.py  naturalperm.py  primefac.py  primestack.py
tests/: test_binary.py  test_naturalperm.py  test_primefac.py
