[tool.poetry]
name = "naturalperm"
version = "0.1.0"
description = ""
authors = ["Robert Daland <rdaland@Roberts-MacBook-Air.local>"]

[tool.poetry.dependencies]
python = "^3.10"
primefac = "^2.0.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
